reportOfMultipleFiles